<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XDA One</string>

    <string name="menu_send_message">Send Author a Message</string>
    <string name="menu_copy_content">Copy Post Content</string>
    <string name="menu_author_profile">View Author\'s Profile</string>
    <string name="menu_open_browser">Open in Browser</string>

    <string name="menu_add_attachment">Add Attachment</string>

    <string name="menu_profile_change_password">Change Password</string>
    <string name="menu_profile_update_email">Update Email</string>

    <string name="no_internet_connection">Please connect to Internet</string>

    <string name="sign_in_title">Sign In/Register</string>

    <string name="forums">Forums</string>
    <string name="threads">Threads</string>

    <string name="inbox_title">Inbox</string>
    <string name="sent_items_title">Sent Items</string>

    <string name="double_back_press">Press once again to exit!</string>

    <!-- forum menu -->
    <string name="forum_home_title">XDA Home</string>
    <string name="subscribed">Subscribed</string>
    <string name="participated">Participated</string>
    <string name="notifications">Notifications</string>
    <string name="forum_newest_title">New</string>
    <string name="forum_top_title">Top</string>
    <string name="forum_all_title">All</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="d_items_checked">%d items checked</string>
    <string name="posts_selected_number">%d posts selected</string>

    <!-- Small phrases -->
    <string name="send">Send</string>
    <string name="message_content">Message Content</string>
    <string name="title">Title</string>
    <string name="loading">Loading…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="thanks">Thanks</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="private_messages">Private Messages</string>
    <string name="more_xda">More XDA</string>
    <string name="replying_to">Replying to: %s</string>
    <string name="other">Other</string>
    <string name="last_post">Last Post</string>
    <string name="thread_title">Thread Title</string>
    <string name="views">Views</string>
    <string name="reply_count">Reply Count</string>
    <string name="date">Date</string>
    <string name="avatar">Avatar</string>
    <string name="remove_thanks">Remove Thanks</string>
    <string name="count">Count</string>
    <string name="email">Email</string>
    <string name="mark_read">Mark Read</string>
    <string name="mark_unread">Mark Unread</string>
    <string name="delete">Delete</string>
    <string name="forum_title">Forum Title</string>
    <string name="creating_new_post">Creating…</string>
    <string name="quote">Quote</string>

    <string name="find_your_device_title">Find Your Device</string>

    <string name="search_xda_title">Search XDA</string>

    <string name="post_creation_failed">Post creation failed</string>

    <string name="message_delete_successful">Successfully deleted message</string>

    <string name="forum_subscription_subscribed">Successfully subscribed to forum</string>
    <string name="forum_subscription_unsubscribed">Successfully unsubscribed from forum</string>
    <string name="forum_subscription_toggle_failed">Toggling of forum subscription failed</string>

    <string name="thread_subscription_subscribed">Successfully subscribed to thread</string>
    <string name="thread_subscription_unsubscribed">Successfully unsubscribed from thread</string>
    <string name="thread_subscription_toggle_failed">Failed to change subscription status
        of thread</string>

    <!-- User Profile -->
    <string name="user_profile_title">Title:\n%1$s</string>
    <string name="user_profile_signature">Signature:\n%1$s</string>
    <string name="user_profile_devices">Devices:\n%1$s</string>
    <string name="user_profile_email">Email:\n%1$s</string>

    <string name="user_profile_post_title">Posts</string>
    <string name="user_profile_user_title">User</string>

    <!-- Auth -->
    <string name="dont_have_xda_account">
        <![CDATA[Don&apos;t have an xda-developers account yet?]]></string>
    <string name="sign_in_google_plus">g+ Sign In with Google</string>
    <string name="register_email">Register using Email</string>
    <string name="change_password">Change Password</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="no_items_empty_view">No items to show</string>

    <string name="message_reply_success">Replying to the message was successful</string>
    <string name="message_reply_failed">Replying to the message failed</string>
    <string name="placeholder">Placeholder</string>
    <string name="to">To</string>
    <string name="message_subject">Message Subject</string>
    <string name="content">Content</string>
    <string name="user_profile">User Profile</string>
    <string name="find_your_device">Find Your Device</string>
    <string name="multi_quote">Multi Quote</string>
    <string name="mentions">Mentions</string>
    <string name="quotes">Quotes</string>
    <string name="quote_mentions">Quotes/Mentions</string>
    <string name="user_profile_thanked_posts_count">Thanked Posts Count:\n%1$d</string>
    <string name="user_profile_post_count">Post Count:\n%1$d</string>
    <string name="find_a_device">Find a Device</string>
    <string name="forum_general_title">General</string>
    <string name="one_account_allowed">Only one XDA account can be added at a time</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logging_in">Logging in…</string>
    <string name="new_message_send_successful">Message sent successfully</string>
    <string name="new_message_send_failed">Sending message failed</string>
    <string name="my_devices">My Devices</string>
    <string name="failed_to_get_forum">Failed to get URL\'s items</string>
    <string name="failed_to_logout">Failed to logout</string>
    <string name="register">Register</string>
    <string name="recaptcha">reCAPTCHA Response</string>
    <string name="pm">PM</string>

    <string name="xda_news">XDA News</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta pretium urna, at sagittis turpis posuere nec. Quisque vulputate dignissim metus, eget eleifend tortor commodo ultrices. Cras eros ante, faucibus sit amet eleifend at, rhoncus ut dolor. Suspendisse cursus sollicitudin elit, sit amet porta ante interdum id. Maecenas feugiat, neque eget lobortis volutpat, metus neque fermentum erat, at tincidunt purus purus in justo. Curabitur consectetur augue non elit porttitor rhoncus. Pellentesque accumsan congue blandit. Mauris tincidunt congue velit. Quisque gravida at sem in rhoncus. Curabitur id lectus sed lectus ultrices aliquet a vitae augue. Sed eu euismod nisi, vitae semper nulla. Proin mauris orci, efficitur sed nunc sed, dictum maximus lectus. Cras fringilla suscipit nisl, sit amet scelerisque leo tincidunt ut. </string>
    <string name="read_more">Read more</string>
    <string name="something_went_wrong_request">Something went wrong with that request</string>
    <string name="unable_to_refresh">Unable to refresh posts</string>
    <string name="post_title">Post Title</string>
</resources>
