<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="always"
        android:title="@string/share" />
    <item
        android:id="@+id/menu_thanks"
        android:showAsAction="never"
        android:title="@string/thanks" />
    <item
        android:id="@+id/menu_send_message"
        android:showAsAction="never"
        android:title="@string/menu_send_message" />
    <item
        android:id="@+id/menu_copy_content"
        android:showAsAction="never"
        android:title="@string/menu_copy_content" />
    <item
        android:id="@+id/menu_author_profile"
        android:showAsAction="never"
        android:title="@string/menu_author_profile" />
    <item
        android:id="@+id/menu_open_browser"
        android:showAsAction="never"
        android:title="@string/menu_open_browser" />

</menu>