<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pkg="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/view_message_fragment_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.makeramen.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/account_circle"
                pkg:border_color="@android:color/transparent"
                pkg:oval="true" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/avatar"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_name"
                style="@style/Theme.One.ThreadTextAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_toRightOf="@+id/avatar"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:text="@string/username" />

            <TextView
                android:id="@+id/date"
                style="@style/Theme.One.ThreadTextAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/user_name"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/last_post" />

            <LinearLayout
                android:id="@+id/view_message_fragment_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar"
                android:layout_margin="8dip"
                android:orientation="vertical"
                android:padding="8dp" />
        </RelativeLayout>
    </ScrollView>


    <com.xda.one.ui.widget.FloatingActionButton
        android:id="@+id/view_message_fragment_floating_reply_button"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:padding="16dp"
        android:src="@drawable/reply"
        android:tint="@android:color/white" />

</RelativeLayout>