<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pkg="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewStyle.Light"
    android:id="@+id/thread_list_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    pkg:cardBackgroundColor="@android:color/white"
    pkg:cardCornerRadius="0dp"
    pkg:cardElevation="1dp">

    <RelativeLayout
        android:id="@+id/thread_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/thread_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:maxLines="2"
            android:minLines="1"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:singleLine="false"
            android:text="@string/thread_title"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_above="@+id/thread_list_user_container"
            android:layout_centerHorizontal="true"
            android:background="@color/default_divider" />

        <RelativeLayout
            android:id="@+id/thread_list_user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/thread_title"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/avatar_image_dimension"
                android:layout_height="@dimen/avatar_image_dimension"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/poster_user_name"
                android:scaleType="fitXY"
                android:src="@drawable/account_circle"
                pkg:riv_border_color="@android:color/transparent"
                pkg:riv_oval="true" />

            <TextView
                android:id="@+id/poster_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/avatar"
                android:layout_toRightOf="@+id/avatar"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:singleLine="true"
                android:text="@string/username" />

            <TextView
                android:id="@+id/last_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/poster_user_name"
                android:layout_alignStart="@+id/poster_user_name"
                android:layout_below="@+id/poster_user_name"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:text="@string/last_post"
                android:textAppearance="@style/Theme.One.PostTimeDateTextAppearance" />
        </RelativeLayout>

        <TextView
            android:id="@+id/thread_list_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/thread_list_user_container"
            android:layout_marginBottom="8dp"
            android:maxLines="4"
            android:minLines="1"
            android:paddingBottom="8dp"
            android:singleLine="false"
            android:text="@string/message_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignBottom="@+id/thread_list_item_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/default_divider" />

        <RelativeLayout
            android:id="@+id/thread_item_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/divider"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/thread_list_item_sticky"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginRight="8dp"
                android:padding="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_pin" />

            <ImageView
                android:id="@+id/thread_list_item_locked"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="start|center_vertical"
                android:layout_toEndOf="@+id/thread_list_item_sticky"
                android:layout_toRightOf="@+id/thread_list_item_sticky"
                android:padding="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_lock" />

            <TextView
                android:id="@+id/reply_count"
                style="@style/Theme.One.ThreadTextAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:text="@string/reply_count" />

            <ImageView
                android:id="@+id/thread_list_item_reply"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignTop="@+id/reply_count"
                android:layout_gravity="end"
                android:layout_marginRight="4dp"
                android:layout_toLeftOf="@+id/reply_count"
                android:layout_toStartOf="@+id/reply_count"
                android:padding="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_nav_message" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>